frontend/src/styles/main.scss
/* Style Menu 
- Overall page style / #pagestyle
- Pronom main menu / #pronommainmenu
- Main / #main
- Breadcrumbs / #breadcrumbs
- Buttons / #buttons
- Tooltip / #tooltip
- Social media links / #spcialmedia
*/

/* Font Awesome Import */

$fa-font-path: '~@fortawesome/fontawesome-free/webfonts'; 
@import '~@fortawesome/fontawesome-free/scss/fontawesome';
@import '~@fortawesome/fontawesome-free/scss/solid';
@import '~@fortawesome/fontawesome-free/scss/regular';
@import '~@fortawesome/fontawesome-free/scss/brands';


/* Overall page style #pagestyle ========================== */
$active-blue: #0f528d;

@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Roboto+Mono:wght@400;500;600;700&display=swap');
html, body {
  font-family: 'Open Sans', sans-serif;
  margin:0;
  padding: 0;
}
button, a {
  cursor: pointer;
}
.page-container {
  display: grid;
  min-height: 100vh;
  padding: 0 90px;
  grid-template-columns: auto 1fr;
  @media only screen and (max-width: 1200px) {
    display: block;
    padding: 0;
  }
}
.propose-edition {
  border-left: 2px solid #7070708c;
  padding-left: 20px;
  @media only screen and (max-width: 980px) {
    grid-row: 2/3;
    border-left: none;
    padding-left: 0;
  }
}
ul {
  margin:0;
}
h1 {
  height: 0;
  width: 0;
  color:transparent;
  padding: 0;
  margin: 0;
}
h2 {
 font-size: 1.8em;
 margin: 10px 0;
 @media only screen and (max-width: 700px) {
  font-size: 1.6em;
 }
}
h3{
  font-size: 1.3em;
  margin: 10px 0;
}
h1, h2, h3, h4, h5 {
  font-family: 'Roboto Mono', monospace;
  font-weight: 500;
}
p {
  font-size: 1em;
}
article {
  border-top: 2px solid black;
  padding-top: 10px;
  margin-top: 35px;
}
a {
  text-decoration: none;
}
hr {
  border: none;
  border-top: 2px solid black;
  margin-top: 35px;
}
.push-right {
  margin-left: auto;
}
.button-container {
  display: flex;
}
html {
  scroll-behavior: smooth;  
}
// Checkbox #checkbox START
input {
  &.check {
    width: 20px;
    align-items: center;
    justify-content: center;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    padding-left: 10px;
    padding-right: 10px;
    height: 30px;
  }
}
// Checkbox END
// Select #select START
select {
  display: block;
  width: 100%;
  min-width: fit-content;
  border: 2px solid #0f528d;
  font-size: 1em;
  height: 30px;
  padding: 0 20px 0 0;
  font-weight: 500;
  font-family: 'Roboto Mono', monospace;
  border-radius: 0;
  background: white;
  &:focus {
    outline: 5px solid #8EC0EC;
  }
  option {
    background: white;
    color: black;
  }
  &.blue {
    background: #0f528d;
    color: white; 
  }
}
// Select #select END
// Buttons - START #buttons
button, a{
  font-family: 'Roboto Mono', monospace;
  &.black {
    background: black;
    color: white;
    border: 2px solid black;
  }
  &.blue {
    background: $active-blue;
    color: white;
    border: 2px solid $active-blue;
    transition: all 0.2s;
    &:hover {
      background: white;
      color: $active-blue !important;
    }
  }
  &.bordered-blue {
    background: white;
    color: $active-blue;
    border: 2px solid $active-blue;
    transition: all 0.2s;
    &:hover {
      background: $active-blue;
      color: white !important;
    }
  }
  &.red {
    background: #E65841;;
    color: black;
    border: 2px solid #E65841;
    transition: all 0.2s;
    &:hover {
      background: white;
      color: black !important;
    }
  }
  &.bordered-red {
    background: white;
    color: black;
    border: 2px solid #E65841;
    transition: all 0.2s;
    &:hover {
      background: #E65841;
      color: black !important;
    }
  }
  &.black {
    background: black;
    color: white;
    border: 2px solid black;
    transition: all 0.2s;
    &:hover {
      background: white;
      color: black !important;
    }
  }
  &.bordered-black {
    background: white;
    color: black;
    border: 2px solid black;
    transition: all 0.2s;
    &:hover {
      background: black;
      color: white !important;
    }
  }
  &.small {
    font-size: 0.9em;
    padding-left: 15px;
    padding-right: 15px;
    font-weight: 500;
    max-height: 45px;
    min-height: 40px;
  }
  &.xsmall {
    font-size: 0.9em;
    padding-left: 15px;
    padding-right: 15px;
    font-weight: 500;
    max-height: 45px;
    min-height: 30px;
  }
  &.medium {
    font-size: 1.1em;
    padding: 8px 10px;
    font-weight: 400px;
  }
  &.large {
    font-size: 1.3em;
  }
  &.xlarge{
    font-size: 1.5em;
    height: 50px;
    padding: 0 50px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
}
// Buttons - END
// List #list - START
ul {
  padding-left: 0;
  li {
    list-style-type: none;
  }
}
/* ... */

